# git-gemini-reviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
prompts/: backlog.md  generic.md
src/core/: backlog_api_client.py  gemini_reviewer.py  git_client.py  settings.py  string_utils.py
src/git_gemini_reviewer/: backlog_reviewer.py  cli.py  generic_reviewer.py
src/git_gemini_reviewer/commands/: review.py
